--- a/package.json
+++ b/package.json
@@ -21,11 +21,9 @@
     "url": "https://github.com/jtheriault/boilerplate-javascript/issues"
   },
   "devDependencies": {
+    "code-copter": "^1.0.0",
     "istanbul": "^0.3.22",
     "jasmine": "~2.3.2",
-    "jscs": "~2.2.1",
-    "jshint": "~2.8.0",
-    "nodemon": "~1.7.1",
-    "walk": "~2.3.9"
+    "nodemon": "~1.7.1"
   }
 }
