Text-based contributors files are so NOT node!

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "javascript",
     "boilerplate"
   ],
-  "author": "Joe Theriault <joseph@yankoismedia.com>",
+  "author": "Joe Theriault <joseph@yankoismedia.com> (http://www.josephtheriault.com)",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/jtheriault/boilerplate-javascript/issues"
