--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "code-copter": "^1.2.0",
+    "code-copter-analyzer-shortrequire": "^1.0.1",
     "istanbul": "^0.3.22",
     "jasmine": "~2.3.2",
     "nodemon": "~1.7.1"
