Enshrine version->shrinkwrap->publish workflow

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "docs": "jsdoc2md src/*.js --template src/README.hbs > README.md",
     "ls:todo": "egrep -nr '\\W+TODO\\W+.*$' src/ || echo 'Nothing to do.'",
     "test": "JASMINE_CONFIG_PATH=jasmine.json istanbul cover --handle-sigint jasmine",
+    "prepublish": "npm shrinkwrap",
+    "preshrinkwrap": "rm -f npm-shrinkwrap.json",
     "posttest": "istanbul check-coverage",
+    "postversion": "npm publish",
     "watch:test": "nodemon -w src -x npm test"
   },
   "repository": {
